fix: - reduce number of selectable days to 7 - fix invisible search button text for webkit browsers

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -62,6 +62,9 @@ button {
   font-family: inherit;
   background-image: var(--primary-color);
   background-color: var(--primary-color);
+
+  -webkit-text-fill-color: var(--secondary-background-color);
+  
   cursor: pointer;
   transition: border-color 0.25s, filter 0.25s;
 }
